3 number of channels out

--- a/dehaze-kernel copy.ipynb
+++ b/dehaze-kernel copy.ipynb
@@ -1521,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 115,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-04-21T16:01:17.219705Z",
@@ -1563,7 +1563,7 @@
     "        self.tail = nn.Sequential(\n",
     "            nn.Conv2d(depth_rate, 256, 3, padding=1),       # 64 → 256\n",
     "            nn.ReLU(inplace=True),\n",
-    "            nn.Conv2d(256, in_channels * 16, 3, padding=1), # 256 → 48 for 3 × 4²\n",
+    "            nn.Conv2d(256, 12, 3, padding=1), # 256 → 48 for 3 × 4²\n",
     "            nn.PixelShuffle(2)                              # 48 → 3, upsample ×4\n",
     "        )\n",
     "\n",
@@ -1580,6 +1580,7 @@
     "        feat4 = self.rdb4(feat3)\n",
     "        # print(f\"Shape of feat4: {feat4.shape}\")\n",
     "        out_feat = self.conv_out(feat4)\n",
+    "        print(\"CONV Tail final\", self.tail)\n",
     "\n",
     "        sr = self.tail(out_feat)  # shape: (B, 3, H×4, W×4)\n",
     "        return sr, sr, [feat1, feat2, feat3, feat4]"
@@ -1589,18 +1590,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With pixle shuffle 2"
+    "With pixle shuffle 2 and conv out 12"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "CONV Tail final Sequential(\n",
+      "  (0): Conv2d(64, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (1): ReLU(inplace=True)\n",
+      "  (2): Conv2d(256, 12, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (3): PixelShuffle(upscale_factor=2)\n",
+      ")\n",
+      "Output shape: torch.Size([1, 3, 256, 256])\n",
+      "Feature shapes: [torch.Size([1, 64, 128, 128]), torch.Size([1, 64, 128, 128]), torch.Size([1, 64, 128, 128]), torch.Size([1, 64, 128, 128])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a random input tensor\n",
+    "input_tensor = torch.randn(1, 3, 128, 128)  # Batch size of 1, 3 channels, 256x256 image\n",
+    "\n",
+    "# Initialize the DeepGuidedNetwork\n",
+    "model = DeepGuidedNetwork(radius=1)\n",
+    "\n",
+    "# Forward pass through the network\n",
+    "output_tensor, dummy_out, features = model(input_tensor)\n",
+    "\n",
+    "# Print the output shape\n",
+    "print(\"Output shape:\", output_tensor.shape)\n",
+    "print(\"Feature shapes:\", [f.shape for f in features])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With pixle shuffle 2 and conv out 48"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CONV Tail final Sequential(\n",
+      "  (0): Conv2d(64, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (1): ReLU(inplace=True)\n",
+      "  (2): Conv2d(256, 48, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (3): PixelShuffle(upscale_factor=2)\n",
+      ")\n",
       "Output shape: torch.Size([1, 12, 256, 256])\n",
       "Feature shapes: [torch.Size([1, 64, 128, 128]), torch.Size([1, 64, 128, 128]), torch.Size([1, 64, 128, 128]), torch.Size([1, 64, 128, 128])]\n"
      ]
@@ -3475,7 +3524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -3500,7 +3549,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[102]\u001b[39m\u001b[32m, line 15\u001b[39m\n\u001b[32m     11\u001b[39m \u001b[38;5;66;03m# --- Initial Validation --- #\u001b[39;00m\n\u001b[32m     12\u001b[39m \u001b[38;5;66;03m# old_val_psnr, old_val_ssim = validationB(net, val_data_loader, device, category)\u001b[39;00m\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m# print(f\"[Dehazing Init Val] PSNR: {old_val_psnr:.2f}, SSIM: {old_val_ssim:.4f}\")\u001b[39;00m\n\u001b[32m     14\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m sr_enabled:\n\u001b[32m---> \u001b[39m\u001b[32m15\u001b[39m     sr_val_psnr, sr_val_ssim = \u001b[43mvalidation_sr\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnet\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msr_val_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     16\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m[SR Init Val] PSNR: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msr_val_psnr\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, SSIM: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msr_val_ssim\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     18\u001b[39m \u001b[38;5;66;03m# --- Training Loop --- #\u001b[39;00m\n\u001b[32m     19\u001b[39m \u001b[38;5;66;03m# best_psnr = old_val_psnr\u001b[39;00m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[118]\u001b[39m\u001b[32m, line 15\u001b[39m\n\u001b[32m     11\u001b[39m \u001b[38;5;66;03m# --- Initial Validation --- #\u001b[39;00m\n\u001b[32m     12\u001b[39m \u001b[38;5;66;03m# old_val_psnr, old_val_ssim = validationB(net, val_data_loader, device, category)\u001b[39;00m\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m# print(f\"[Dehazing Init Val] PSNR: {old_val_psnr:.2f}, SSIM: {old_val_ssim:.4f}\")\u001b[39;00m\n\u001b[32m     14\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m sr_enabled:\n\u001b[32m---> \u001b[39m\u001b[32m15\u001b[39m     sr_val_psnr, sr_val_ssim = \u001b[43mvalidation_sr\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnet\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msr_val_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     16\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m[SR Init Val] PSNR: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msr_val_psnr\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, SSIM: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msr_val_ssim\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     18\u001b[39m \u001b[38;5;66;03m# --- Training Loop --- #\u001b[39;00m\n\u001b[32m     19\u001b[39m \u001b[38;5;66;03m# best_psnr = old_val_psnr\u001b[39;00m\n",
       "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[44]\u001b[39m\u001b[32m, line 9\u001b[39m, in \u001b[36mvalidation_sr\u001b[39m\u001b[34m(net, sr_val_loader, device)\u001b[39m\n\u001b[32m      7\u001b[39m         sr_out, _, _ = net(lr, sr = \u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[32m      8\u001b[39m     \u001b[38;5;66;03m# print(\"Shapes 1: \", sr_out.shape, hr.shape)\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m     psnr_list.extend(\u001b[43mto_psnr\u001b[49m\u001b[43m(\u001b[49m\u001b[43msr_out\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhr\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[32m     10\u001b[39m     ssim_list.extend(to_ssim(sr_out, hr))\n\u001b[32m     12\u001b[39m avr_psnr = \u001b[38;5;28msum\u001b[39m(psnr_list) / \u001b[38;5;28mlen\u001b[39m(psnr_list) \u001b[38;5;28;01mif\u001b[39;00m psnr_list \u001b[38;5;28;01melse\u001b[39;00m \u001b[32m0.0\u001b[39m\n",
       "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[101]\u001b[39m\u001b[32m, line 13\u001b[39m, in \u001b[36mto_psnr\u001b[39m\u001b[34m(dehaze, gt)\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[33;03mCompute PSNR (Peak Signal-to-Noise Ratio) between dehazed and ground truth images.\u001b[39;00m\n\u001b[32m      4\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m     10\u001b[39m \u001b[33;03m    List[float]: PSNR values for each image in the batch.\u001b[39;00m\n\u001b[32m     11\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m     12\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mShapes: \u001b[39m\u001b[33m\"\u001b[39m, dehaze.shape, gt.shape)\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m mse = \u001b[43mF\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmse_loss\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdehaze\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreduction\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mnone\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m.mean(dim=[\u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m3\u001b[39m])  \u001b[38;5;66;03m# Compute MSE per image\u001b[39;00m\n\u001b[32m     14\u001b[39m intensity_max = \u001b[32m1.0\u001b[39m\n\u001b[32m     16\u001b[39m \u001b[38;5;66;03m# Compute PSNR safely, avoiding division by zero and extreme values\u001b[39;00m\n",
       "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\abd\\d\\ai\\dehaze\\.venv\\Lib\\site-packages\\torch\\nn\\functional.py:3791\u001b[39m, in \u001b[36mmse_loss\u001b[39m\u001b[34m(input, target, size_average, reduce, reduction)\u001b[39m\n\u001b[32m   3788\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m size_average \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mor\u001b[39;00m reduce \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m   3789\u001b[39m     reduction = _Reduction.legacy_get_string(size_average, reduce)\n\u001b[32m-> \u001b[39m\u001b[32m3791\u001b[39m expanded_input, expanded_target = \u001b[43mtorch\u001b[49m\u001b[43m.\u001b[49m\u001b[43mbroadcast_tensors\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtarget\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3792\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m torch._C._nn.mse_loss(\n\u001b[32m   3793\u001b[39m     expanded_input, expanded_target, _Reduction.get_enum(reduction)\n\u001b[32m   3794\u001b[39m )\n",
