Ablation - gave markdown headings

--- a/dehaze-kernel student ablation view.ipynb
+++ b/dehaze-kernel student ablation view.ipynb
@@ -2967,11 +2967,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
     "\n",
     "def testDeepguided(net, val_data_loader, device, category, save_tag=False):\n",
     "    \"\"\"\n",
@@ -4926,7 +4925,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Metrics: Validation Dataset"
+    "### Metrics: Validation Dataset - Without Guided Filter"
    ]
   },
   {
@@ -4953,7 +4952,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Metrics: Test Dataset"
+    "### Metrics: Test Dataset - Without Guided Filter"
    ]
   },
   {
@@ -4980,7 +4979,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Metrics: Valid Dataset"
+    "### Metrics: Valid Dataset - With Guided Filter"
    ]
   },
   {
@@ -5634,7 +5633,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Metrics: Test Dataset"
+    "### Metrics: Test Dataset - With Guided Filter"
    ]
   },
   {
