markdown for new metrics

--- a/dehaze-kernel student ablation view.ipynb
+++ b/dehaze-kernel student ablation view.ipynb
@@ -2966,6 +2966,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test Haze - Guided"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -5627,6 +5634,13 @@
    ],
    "source": [
     "testDeepguided(net, val_data_loader, device, category)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(avr_psnr, avr_ssim, avr_lpips, avr_ciede)"
    ]
   },
   {
